2009-03-03  Alexander Larsson  <alexl@redhat.com>

	Bug 561172 – gnome-open fails on local URIs with anchors

        * programs/gvfs-open.c:
	Don't pass file:// uris with anchor as filename

2009-03-03  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfileinputstream.c:
        * client/gdaemonfileoutputstream.c:
	Make argument const char * as per the glib change.

2009-03-02  Ryan Lortie  <desrt@desrt.ca>

	* daemon/trashlib/trashitem.c (trash_item_restore): set 'error' on
	failure.  Fixes a crasher when attempting a restore to somewhere we
	don't have write permissions for.

2009-03-02  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 1.1.7 ===

2009-03-02  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2009-03-02  David Zeuthen  <davidz@redhat.com>

	Bug 551403 – Support Reading Volume Icon/Name Information
	from .xdg-volume-info

	* common/Makefile.am:
	* common/gvfsmountinfo.[ch]: Move autorun file detection to common
	library. Also add routines for detecting .xdg-volume-info files.

	* monitor/hal/ghalmount.c: Use g_mount_info*() functions for
	detecting autorun and .xdg-volume-info files.

2009-03-02  Paolo Borelli  <pborelli@katamail.com>

	* daemon/gvfsbackendarchive.c:
	Chain up finalize

2009-03-02  Alexander Larsson  <alexl@redhat.com>

	Bug 547161 – http string leak

	* client/httpuri.c (http_get_mount_info_for_path):
	Fix leak

2009-03-02  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackendsftp.c:
	Implement query_info on sftp streams

2009-03-02  Alexander Larsson  <alexl@redhat.com>

	Bug 550929 – nautilus sftp:// doesn't read User in ~/.ssh/config

	* daemon/gvfsbackendsftp.c:
	Don't specify user unless requested explicitly by the uri.
	Patch from Christian Neumair

2009-03-02  Alexander Larsson  <alexl@redhat.com>

	Bug 569712 – Write comments for translators!

	* common/gvfsdnssdresolver.c (service_resolver_timed_out):
	Fix position of translator comments.
